force-app/main/default/objects/Propfocus_Config__mdt/Propfocus_Config__mdt.object-meta.xml
<CustomObject>
    <description>Subscriber-configurable settings for Propfocus package endpoints.</description>
    <label>Propfocus Config</label>
    <pluralLabel>Propfocus Configs</pluralLabel>
</CustomObject>