force-app/main/default/objects/Propfocus_Config__mdt/fields/Api_Named_Credential__c.field-meta.xml
<CustomField>
    <description>Named Credential developer name used for Propfocus API callouts.</description>
    <defaultValue>&quot;Propfocus_API&quot;</defaultValue>
    <fullName>Api_Named_Credential__c</fullName>
    <label>API Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>