force-app/main/default/objects/Propfocus_Config__mdt/fields/Auto_Microsite_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Auto_Microsite_Statuses__c</fullName>
    <inlineHelpText>Comma-separated Lead statuses that auto-open the Generate Microsite modal when the Lead moves into one of them and no microsite exists yet (e.g. Not Connected,Contacted,Qualified). Leave blank to disable auto-open.</inlineHelpText>
    <label>Auto Microsite Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>