force-app/main/default/objects/Propfocus_Config__mdt/fields/Auto_Post_Visit_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Auto_Post_Visit_Statuses__c</fullName>
    <inlineHelpText>Comma-separated Lead statuses that auto-open the Generate Post Visit modal when the Lead moves into one of them and no post visit link exists yet. Leave blank to disable auto-open.</inlineHelpText>
    <label>Auto Post Visit Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>