force-app/main/default/objects/Propfocus_Config__mdt/fields/Auto_Site_Visit_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Auto_Site_Visit_Statuses__c</fullName>
    <inlineHelpText>Comma-separated Lead statuses that auto-open the Confirm Site Visit modal when the Lead moves into one of them and no site visit link exists yet. Leave blank to disable auto-open.</inlineHelpText>
    <label>Auto Site Visit Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>