force-app/main/default/objects/Propfocus_Config__mdt/fields/Embed_Base_Url__c.field-meta.xml
<CustomField>
    <description>Base URL for the Buyer Insights iframe. Production default: https://propfocus.in/embed/salesforce. Sandboxes: set to https://dev.propfocus.in/embed/salesforce.</description>
    <fullName>Embed_Base_Url__c</fullName>
    <inlineHelpText>Edit in Setup → Custom Metadata Types → Propfocus Config → Default. Use https://propfocus.in/embed/salesforce in production; https://dev.propfocus.in/embed/salesforce in sandboxes.</inlineHelpText>
    <label>Embed Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>