force-app/main/default/objects/Propfocus_Config__mdt/fields/Embed_Uses_Salesforce_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Embed_Uses_Salesforce_Lead_Id__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Embed Uses Salesforce Lead Id</label>
    <type>Checkbox</type>
</CustomField>