force-app/main/default/objects/Propfocus_Config__mdt/fields/Lead_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Field__c</fullName>
    <label>Lead Status Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>