force-app/main/default/objects/Propfocus_Config__mdt/fields/Notification_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <description>Custom notification type developer name used for lead owner notifications.</description>
    <defaultValue>&quot;PropFocus_Notification&quot;</defaultValue>
    <fullName>Notification_Type_Developer_Name__c</fullName>
    <label>Notification Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>