force-app/main/default/objects/Propfocus_Config__mdt/fields/OAuth_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Client_Id__c</fullName>
    <label>OAuth Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>