force-app/main/default/objects/Propfocus_Config__mdt/fields/OAuth_Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Grant_Type__c</fullName>
    <label>OAuth Grant Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>