force-app/main/default/objects/Propfocus_Config__mdt/fields/OAuth_Token_Url__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Token_Url__c</fullName>
    <label>OAuth Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>