force-app/main/default/objects/Propfocus_Config__mdt/fields/Opportunity_Buyer_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Buyer_Name_Field__c</fullName>
    <label>Opportunity Buyer Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>