force-app/main/default/objects/Propfocus_Config__mdt/fields/Opportunity_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lookup_Field__c</fullName>
    <label>Opportunity Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>