force-app/main/default/objects/Propfocus_Config__mdt/fields/Opportunity_Pre_Sales_Owner_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Pre_Sales_Owner_Phone_Field__c</fullName>
    <label>Opportunity Pre Sales Owner Phone Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>