force-app/main/default/objects/Propfocus_Config__mdt/fields/Opportunity_Project_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Project_Field__c</fullName>
    <label>Opportunity Project Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>