force-app/main/default/objects/Propfocus_Config__mdt/fields/Project_Field__c.field-meta.xml
<CustomField>
    <fullName>Project_Field__c</fullName>
    <label>Project Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>