force-app/main/default/objects/Propfocus_Config__mdt/fields/Related_Date_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Date_Source_Field__c</fullName>
    <label>Related Date Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>