force-app/main/default/objects/Propfocus_Config__mdt/fields/Rnr_Microsite_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Rnr_Microsite_Statuses__c</fullName>
    <inlineHelpText>Comma-separated Lead statuses for which the microsite Lead Type defaults to RNR when the Generate Microsite modal opens (e.g. Not Connected,Open). Any other status defaults to New. Matching is case-insensitive.</inlineHelpText>
    <label>RNR Microsite Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>