force-app/main/default/objects/Propfocus_Config__mdt/fields/Show_Copy_Modal__c.field-meta.xml
<CustomField>
    <fullName>Show_Copy_Modal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, users see a modal with the WhatsApp message and a Copy button after generating a link.</inlineHelpText>
    <label>Show Copy Modal</label>
    <type>Checkbox</type>
</CustomField>