force-app/main/default/objects/Propfocus_Config__mdt/fields/Show_Post_Visit_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Post_Visit_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When enabled, the Generate Post Visit button is shown on the Lead and Opportunity Propfocus panel.</inlineHelpText>
    <label>Show Post Visit Button</label>
    <type>Checkbox</type>
</CustomField>