force-app/main/default/objects/Propfocus_Config__mdt/fields/Show_Site_Visit_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Site_Visit_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When enabled, the Confirm Site Visit button is shown on the Lead and Opportunity Propfocus panel.</inlineHelpText>
    <label>Show Site Visit Button</label>
    <type>Checkbox</type>
</CustomField>