force-app/main/default/objects/Propfocus_Config__mdt/fields/Site_Visit_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Number_Field__c</fullName>
    <label>Site Visit Number Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>