force-app/main/default/objects/Propfocus_Config__mdt/fields/Site_Visit_Object__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Object__c</fullName>
    <label>Site Visit Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>
<?xml version="1.0" encoding="UTF-8"?>
<CustomField>
    <fullName>Site_Visit_Object__c</fullName>
    <label>Site Visit Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>