force-app/main/default/objects/Propfocus_Config__mdt/fields/Site_Visit_Planned_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Planned_Date_Field__c</fullName>
    <inlineHelpText>Lead Date field API name to stamp with the planned site visit date when a site visit link is generated (e.g. Planned_Site_Visit_Date__c). Populates validation-required fields so the Site Visit Scheduled Status can be applied. Leave blank to skip.</inlineHelpText>
    <label>Site Visit Planned Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>