force-app/main/default/objects/Propfocus_Config__mdt/fields/Site_Visit_Scheduled_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Scheduled_Status__c</fullName>
    <inlineHelpText>Status value to set on the Lead/Opportunity (in the configured status field) when a site visit link is created. Leave blank to never change the status. Must be a valid picklist value.</inlineHelpText>
    <label>Site Visit Scheduled Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>