force-app/main/default/objects/Propfocus_Config__mdt/fields/Site_Visit_Time_Of_Day_Field__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Time_Of_Day_Field__c</fullName>
    <inlineHelpText>Lead field API name (typically a picklist) to stamp when a site visit link is generated, e.g. Site_Visit_Time_of_Day__c. Its value comes from Site Visit Time Of Day Value. Leave blank to skip.</inlineHelpText>
    <label>Site Visit Time Of Day Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>