force-app/main/default/objects/Propfocus_Config__mdt/fields/Site_Visit_Time_Of_Day_Value__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Time_Of_Day_Value__c</fullName>
    <inlineHelpText>Value to write into the Site Visit Time Of Day Field when a site visit link is generated (must be a valid value for that field, e.g. Morning). Used only when the field is configured.</inlineHelpText>
    <label>Site Visit Time Of Day Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>